# codewiki

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/guide/: ci.md  configuration.md  getting-started.md  installation.md  providers.md  usage.md
src/: agent.rs  config.rs  main.rs  output.rs  prompts.rs  scan.rs  scanner.rs
src/provider/: anthropic.rs  mod.rs  openai.rs  opencode.rs
