[package]
name = "codewiki"
version = "0.1.0"
edition = "2021"
description = "A CLI that writes and maintains agent documentation for your codebase"
license = "MIT"
repository = "https://github.com/sonyarianto/codewiki"
keywords = ["documentation", "cli", "llm", "agent", "codebase"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "codewiki"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ignore = "0.4"
dialoguer = "0.11"
